Fixed Overflow for the navbar

--- a/styles.css
+++ b/styles.css
@@ -508,17 +508,25 @@ img {
   body {
     overflow-x: hidden;
   }
+
+  .navbar h1 {
+    font-size: 24px;
+  }
   .nav-links {
+    overflow-x: hidden;
     position: absolute;
     right: 0px;
     height: 100vh;
-    top: 20vh;
+    top: 9vh;
     background-color: var(--white);
-
-    display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    width: 40%;
+    justify-content: center;
+    gap: 60px;
+    /* display: flex;
+    
+     */
+    display: none;
+    width: 100%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
     padding: 0px 0;
@@ -623,6 +631,7 @@ img {
 .nav-active {
   transform: translateX(0%);
   z-index: 1;
+  display: flex;
 }
 
 .toggle .line-1 {
